implementation of kamatera autoscaler "glue code" based on linode

--- a/cluster-autoscaler/cloudprovider/kamatera/examples/cluster-autoscaler-secret.yaml
+++ b/cluster-autoscaler/cloudprovider/kamatera/examples/cluster-autoscaler-secret.yaml
@@ -10,6 +10,7 @@ stringData:
     [global]
     kamatera-api-client-id=1a222bbb3ccc44d5555e6ff77g88hh9i
     kamatera-api-secret=9ii88h7g6f55555ee4444444dd33eee2
+    cluster-name=aaabbb
     default-min-size=1
     default-max-size=10
     default-password=Aa123456789!
